<?xml version="1.0"?>
<package>
  <name>can_common</name>
  <version>0.0.0</version>
  <description>The can_common package</description>
  <maintainer email="hanbin@plus.ai">hanbin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
